--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
 }
-.hero-img{
-  height: 200px;
-  width: 200px;
+.product-img{
+  height: 420px;
+  width: 350px;
   object-fit: cover;
-  border-radius: 6rem;
+  
 }
 .create-list-place{
   display: flex;
@@ -13,16 +13,29 @@
   flex-wrap: wrap;
 }
 .content-div{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-content: center;
-  align-items: flex-start;
-  margin: 30px;
-  
+  display: inline-grid;
+    justify-content: space-evenly;
+    align-items: center;
+    justify-items: center;
+    margin: 15px;
 }
 
+.detail-div{
+  border-radius: 5px;
+  width: 350px;
+  overflow: hidden;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  transition: all 0.2s;
+  border: 3px solid grey;
+  height: min-content;
+  cursor: pointer;
+}
+.detail-div:hover{
+  border: 3px solid grey;
+  transform: scale(1.1);
+  box-shadow: 5px 5px 5px #2e2d2d;
+}
 .content-div-name{
   margin: 20px;
   display: flex;
@@ -34,6 +47,12 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+}
+.text-deco{
+  text-align:left;
+  letter-spacing: 1px;
+  font-family: sans-serif;
+  font-weight: 300;
 }
 
