--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,26 @@
   object-fit: cover;
   
 }
+.home{
+  text-align: center;
+}
+.home-hello{
+  text-align: center;
+  color: rgb(69, 134, 160);
+  letter-spacing: 1px;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 50px;
+}
+.home-img{
+  height: 500px;
+  width: 500px;
+  object-fit: cover;
+  border-radius: 20rem;
+}
+.not-found-img{
+  border-radius: 2rem;
+}
 .create-list-place{
   display: flex;
   flex-direction: column;
